[package]
name = "neomap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "neolinks"

[dependencies]
chrono = "0.4.35"
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["blocking"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
url = "2.5.0"
